--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,35 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>OpenBook Admin</title>
+  <title>Admin Portal</title>
   <!-- Fonts to support Material Design -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+</head>
+<style>
+  .MuiPickersModal-dialogRoot {
+    max-width: 310px !important;
+  }
+
+  .MuiPickersToolbar-toolbar {
+    width: 310px !important;
+  }
+
+  .MuiPickersToolbar-toolbar,
+  .MuiPickersClockPointer-noPoint,
+  .MuiPickersClockPointer-pointer,
+  .MuiPickersClock-pin {
+    background-color: #00bfa5 !important;
+  }
+
+
+  .MuiPickersClockPointer-thumb {
+    border: 14px solid #00bfa5 !important;
+  }
+
+  .MuiButton-textPrimary {
+    color: #00bfa5 !important;
+  }
+</style>
 </head>
 
 <body>
